@@ -14,6 +14,8 @@
 
 - Removed the CBOT plugin code. Given up hope for a work around.
 
+- Added DDMMYYY date format to the CSV plugin. Also added auto detection for date field delimiters (/-.).
+
 
 0.22
 ====
